# pre-commit-hooks

./: .gitignore  .pre-commit-hooks.yaml  README.md  pyproject.toml
.github/: CODEOWNERS
dbt/: constants.py
dbt/adapters/: factory.py
pre_commit_hooks/: dbt_core_check.py  dbt_core_in_adapters_check.py
tests/: test_dbt_core_check.py
tests/dbt_core_check_tests/: test_dbt_core_check.py
tests/dbt_core_check_tests/dbt/: README.md
tests/dbt_core_check_tests/dbt/tests/adapter/: test_one.py  test_two.py
tests/dbt_core_check_tests/dbt/tests/postgres/: test_two.py
tests/dbt_core_in_adapters_check_tests/: test_dbt_core_in_adapters_check.py
tests/dbt_core_in_adapters_check_tests/dbt/adapters/postgres/: impl.py
