[project]
name = "pre-commit-hooks"
description = "This package contains all of dbt's pre-commit hooks."
version = "0.1.0a1"
authors = [
    { name = "dbt Labs", email = "info@dbtlabs.com" },
]
license = {file = "LICENSE"}

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
dbt-core-in-adapters-check = "pre_commit_hooks.dbt_core_in_adapters_check:main"

[tool.hatch.envs.default]
dependencies = [
    "pytest",
]
